<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mt.lab02a2017.MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:checked="false"
        android:textOff="@string/reserva"
        android:textOn="@string/delivery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/seleccioneHorario"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/selecHorario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/seleccioneHorario"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Switch
        android:id="@+id/switchNotif"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/notif"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ScrollView
        android:layout_width="394dp"
        android:layout_height="107dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/switchNotif"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/pedidoActual"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchNotif" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bAgregar"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/agregar"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="351dp" />

    <Button
        android:id="@+id/bConfirmar"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/conf"
        app:layout_constraintLeft_toRightOf="@+id/bAgregar"
        tools:layout_editor_absoluteY="351dp" />

    <Button
        android:id="@+id/bReset"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginEnd="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:layout_marginStart="8dp"
        android:text="@string/reset"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/bConfirmar"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="351dp" />

    <ListView
        android:id="@+id/listaProductos"
        android:layout_width="394dp"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bConfirmar"
        app:layout_constraintVertical_bias="0.497"
        tools:layout_editor_absoluteY="327dp" />

    <RadioGroup
        android:layout_width="392dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bConfirmar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <RadioButton
            android:id="@+id/rbPlato"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plato" />

        <RadioButton
            android:id="@+id/rbPostre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/postre" />

        <RadioButton
            android:id="@+id/rbBebida"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bebida" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
